Added Equirectangular 3D support

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
           <select id="projection-select" class="rfloat" hidden="hidden">
             <option value=0>Equirectangular</option>
-            <!-- <option value=1>Equirectangular 3D</option> -->
+            <option value=1>Equirectangular 3D</option>
           </select>
 
           <select id="video-select" class="rfloat">
